--- a/src/main/resources/templates/loginForm.html
+++ b/src/main/resources/templates/loginForm.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <link rel="stylesheet" th:href="@{/styles/style.css}" href="styles/style.css">
     <meta charset="UTF-8">
-    <title>Main Page</title>
+    <title>Login Page</title>
 </head>
 <body>
 <nav>
@@ -14,10 +14,10 @@
 </nav>
 <section class="main-window">
     <h1>Login</h1>
-    <form method="post" action="login.html">
+    <form th:action="@{/login}" method="post">
         <input name="username" type="text" placeholder="Username">
         <input name="password" type="password" placeholder="Password">
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Log in</button>
+        <button id="submit" class="btn btn-primary" type="submit">Login</button>
     </form>
 </section>
 </body>
