--- a/src/main/resources/templates/loginForm.html
+++ b/src/main/resources/templates/loginForm.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <link rel="stylesheet" th:href="@{/styles/style.css}" href="styles/style.css">
     <meta charset="UTF-8">
@@ -8,9 +9,13 @@
 <body>
 <nav>
     <ul id="linkList">
-        <li><a href="index.html" th:href="@{index}">Index</a></li>
-        <a id="loginButton" th:href="@{login}" >Login</a>
+        <li><a href="index.html" th:href="@{/index}">Index</a></li>
+        <li sec:authorize="isAnonymous() || hasAuthority('ADMIN')">
+            <a th:href="@{/users/register/form}" href="register.html">Register</a></li>
     </ul>
+    <div sec:authorize="isAnonymous()">
+        <a id="loginButton" class="btn btn-success" th:href="@{/login}" value="Login">Login</a>
+    </div>
 </nav>
 <section class="main-window">
     <h1>Login</h1>
