--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -8,8 +8,15 @@
 </head>
 <body>
     <ul id="linkList">
-        <li><a href="index.html" th:href="@{index}">Index</a></li>
+        <li><a href="index.html" th:href="@{/index}">Index</a></li>
     </ul>
-    <section class="main-window"><h1>Register</h1></section>
+    <div sec:authorize="isAnonymous()">
+        <a id="loginButton" class="btn btn-success" th:href="@{/login}" value="Login">Login</a>
+    </div>
+    <section class="main-window">
+        <h1>Register</h1>
+        <form th:action="@{/users/register/process}" th:object="${form}" method="post">
+        </form>
+    </section>
 </body>
 </html>
