--- a/src/main/resources/templates/restaurants.html
+++ b/src/main/resources/templates/restaurants.html
@@ -27,8 +27,9 @@
             </div>
         </form>
     </nav>
-    <section class="main-window"><h1>Restaurants</h1>
-        <p></p>
+    <section class="main-window">
+        <h1>Restaurants</h1>
+        <p th:text="${restaurants}"></p>
     </section>
 </body>
 </html>
