--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,10 +30,10 @@
     <section class="main-window"><h1>Main page</h1>
         <div sec:authorize="isAuthenticated()">
             <div sec:authorize="hasAuthority('ADMIN')">
-                <h2>Test <span th:text="${#authentication.name}"></span></h2>
+                <h2>Welcome <span th:text="${#authentication.name}"></span></h2>
             </div>
             <div sec:authorize="!hasAuthority('ADMIN')">
-                <h2>Test <span th:text="${#authentication.name}"></span></h2>
+                <h2>Welcome <span th:text="${#authentication.name}"></span></h2>
             </div>
         </div>
     </section>
