--- a/src/main/resources/templates/restaurants.html
+++ b/src/main/resources/templates/restaurants.html
@@ -29,7 +29,18 @@
     </nav>
     <section class="main-window">
         <h1>Restaurants</h1>
-        <p th:text="${restaurants}"></p>
+        <table>
+            <tr>
+                <th>Restaurant name</th>
+                <th>Restaurant id</th>
+                <th>Restaurant reviewer</th>
+            </tr>
+            <tr th:each="restaurant: ${restaurants}">
+                <td th:text="${restaurant.name}"></td>
+                <td th:text="${restaurant.id}"></td>
+                <td th:text="${restaurant.reviewer}"></td>
+            </tr>
+        </table>
     </section>
 </body>
 </html>
