--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,13 +9,14 @@
 <body>
 <nav>
     <ul id="linkList">
-        <li><a href="index.html" th:href="@{index}">Index</a></li>
+        <li><a href="index.html" th:href="@{/index}">Index</a></li>
         <li><a href="restaurants.html" th:href="@{/restaurants}">Restaurants</a></li>
         <li sec:authorize="hasAuthority('ADMIN')">
             <a th:href="@{/users/register/form}" href="register.html">Register user</a></li>
-        <li sec:authorize="hasAuthority('USER')">
-            <a th:href="@{/users/registerRestaurant/form}" href="registerRestaurant.html">Register restaurants</a>
-        </li>
+        <li sec:authorize="hasAuthority('ADMIN')">
+            <a th:href="@{/admin/registerRestaurant/form}" href="registerRestaurant.html">Register restaurants</a></li>
+        <li sec:authorize="hasAuthority('ADMIN')">
+            <a th:href="@{/admin/registerFoodItem/form}" href="registerFoodItem.html">Register food items</a></li>
         <li sec:authorize="hasAuthority('USER')">
             <a th:href="@{/users/restaurantReview/form}" href="restaurantReview.html">Review restaurants</a></li>
     </ul>
