--- a/src/main/resources/templates/registerRestaurant.html
+++ b/src/main/resources/templates/registerRestaurant.html
@@ -7,15 +7,18 @@
     <title>Register restaurant</title>
 </head>
 <body>
-<ul id="linkList">
-    <li><a href="index.html" th:href="@{/index}">Index</a></li>
-    <li><a href="restaurants.html" th:href="@{/restaurants}">Restaurants</a></li>
-    <li sec:authorize="hasAuthority('ADMIN')">
-        <a th:href="@{/users/register/form}" href="register.html">Register user</a></li>
-    <li sec:authorize="hasAuthority('ADMIN')">
-        <a th:href="@{/users/registerRestaurant/form}" href="registerRestaurant.html">Register restaurants</a>
-    </li>
-</ul>
+    <ul id="linkList">
+        <li><a href="index.html" th:href="@{/index}">Index</a></li>
+        <li><a href="restaurants.html" th:href="@{/restaurants}">Restaurants</a></li>
+        <li sec:authorize="hasAuthority('ADMIN')">
+            <a th:href="@{/users/register/form}" href="register.html">Register user</a></li>
+        <li sec:authorize="hasAuthority('ADMIN')">
+            <a th:href="@{/admin/registerRestaurant/form}" href="registerRestaurant.html">Register restaurants</a></li>
+        <li sec:authorize="hasAuthority('ADMIN')">
+            <a th:href="@{/admin/registerFoodItem/form}" href="registerFoodItem.html">Register food items</a></li>
+        <li sec:authorize="hasAuthority('USER')">
+            <a th:href="@{/users/restaurantReview/form}" href="restaurantReview.html">Review restaurants</a></li>
+    </ul>
 <form th:action="@{/logout}" action="#" class="form-inline" method="post">
     <div sec:authorize="isAuthenticated()">
         <button class="btn btn-outline-info" type="submit" value="Logout" id="logoutButton">Logout</button>
@@ -26,7 +29,7 @@
 </form>
     <section class="main-window">
         <h1>Register</h1>
-        <form th:action="@{/users/registerRestaurant/process}" th:object="${form}" method="post">
+        <form th:action="@{/admin/registerRestaurant/process}" th:object="${form}" method="post">
             <label for="restaurantName"></label>
             <input class="form-control" type="text" id="restaurantName" th:field="*{restaurantName}" placeholder="Restaurant name"/>
             <div th:if="${#fields.hasErrors('restaurantName')}">
@@ -36,7 +39,7 @@
                     </li>
                 </ul>
             </div>
-            <button id="submit" class="btn btn-primary" type="submit">Register</button>
+            <button id="submit" class="btn btn-primary" type="submit">Register Restaurant</button>
         </form>
     </section>
 </body>
