--- a/src/main/resources/static/styles/style.css
+++ b/src/main/resources/static/styles/style.css
@@ -1,3 +1,7 @@
+html, body {
+    height: 100%;
+}
+
 body {
     font-family: 'Roboto', sans-serif;
     background: steelblue;
@@ -7,6 +11,7 @@ body {
 h1 {
     font-size: 100px;
     text-align: center;
+    margin-bottom: 0px;
 }
 
 h2 {
@@ -168,11 +173,31 @@ tr:nth-child(even) {
     height: 100px;
     overflow: hidden;
     display: block;
-    margin: auto;
+    margin: 35px auto -50px;
     padding: 10px;
 }
 
 .container {
     text-align: center;
     font-size: 20px;
+}
+
+select {
+    padding: 12px;
+    width: 25%;
+    display: block;
+    position: relative;
+    margin: 80px auto 0px;
+}
+
+#reviewSubmit {
+    width: 25%;
+    position: relative;
+    margin: 75px auto 100px;
+}
+
+#foodSubmit {
+    width: 25%;
+    position: relative;
+    margin: 30px 5% 5%;
 }
