Tests and final tweaks

--- a/src/main/resources/templates/updateReviewer.html
+++ b/src/main/resources/templates/updateReviewer.html
@@ -60,7 +60,7 @@
         </div>
 
         <div sec:authorize="hasAuthority('ADMIN')">
-            <label>Create admin</label>
+            <label>Make admin</label>
             <input type="checkbox" value="true" th:field="*{admin}">
         </div>
         <button id="submit" class="btn btn-primary" type="submit">Register</button>
